<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <Button
        android:id="@+id/buttonReturnDoor"
        android:layout_width="99dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/return_button_door"
        android:textAllCaps="false"
        android:background="@drawable/rounded_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="170dp"
        android:text="@string/title_door_control"
        android:textSize="30sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btnUnlock"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="270dp"
        android:text="@string/button_open_door"
        android:onClick="onUnlockButtonClicked"
        android:textSize="19sp" />


    <TextView
        android:id="@+id/tvDoorStatus"
        android:layout_width="300dp"
        android:layout_height="26dp"
        android:layout_alignParentStart="true"

        android:layout_alignParentBottom="true"
        android:layout_marginStart="80dp"
        android:layout_marginBottom="380dp"
        android:layout_toStartOf="@+id/statusIndicator"
        android:text="@string/state_door_mess"
        android:textSize="19sp"
        android:textStyle="bold"
        tools:ignore="TextSizeCheck" />

    <View
        android:id="@+id/statusIndicator"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="10dp"
        android:background="@color/red"
        android:layout_marginEnd="80dp"
        android:layout_marginBottom="370dp" />



</RelativeLayout>