<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layoutConnexion"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.fragment.FragmentConnection">

    <TextView
        android:id="@+id/text_connexion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/Ecran_connexion"
        android:textSize="75px"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="PxUsage" />

    <Button
        android:id="@+id/buttonConnexion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onClick"
        android:text="@string/ConnectionButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordConnect" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="401dp"
        android:layout_height="700dp"
        android:contentDescription="TODO"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="-4dp"
        tools:layout_editor_absoluteY="-2dp" />

    <TextView
        android:id="@+id/IP"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="75dp"
        android:text="@string/ConnectionTextIP"
        android:textSize="50px"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_connexion"
        tools:ignore="PxUsage" />

    <EditText
        android:id="@+id/enterIP"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:ems="10"
        android:inputType="number"
        android:digits="0123456789."
        android:minHeight="48dp"
        android:text="@string/ConnectionIp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/IP"
        android:autofillHints=""
        tools:ignore="LabelFor" />

    <TextView
        android:id="@+id/password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="75dp"
        android:text="@string/ConnectionTextPassword"
        android:textSize="50px"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/enterIP"
        tools:ignore="PxUsage" />

    <EditText
        android:id="@+id/passwordConnect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:ems="10"
        android:inputType="numberPassword"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password"
        tools:ignore="LabelFor,SpeakableTextPresentCheck"
        android:autofillHints="" />

</androidx.constraintlayout.widget.ConstraintLayout>